*改动描述:
*Bug 或 Feature: Bug
*依赖信息:
    无
*测试相关:
   - 自动测试 - UT: Y
   - UT Case 路径 : odps_src/test/unit_test/xxxx
   - 自动测试 - FT: N
   - FT Case 路径: NA
   - 手动测试描述：
      无
*影响评估：
   - 性能影响：N
   - 性能影响描述： 无
   - 兼容性影响:  N
   - 兼容性影响描述： 无
   - 配置变更影响:  N
   - 是否已提交并完成部署变更review:  N
   - 部署变更步骤描述:
     无

*其他信息：
     无

Change-Id: Ic8f98c380bb52799c21d689376454819d632aa70